--- a/AdminPortal/src/app/addconfig/addconfig.component.html
+++ b/AdminPortal/src/app/addconfig/addconfig.component.html
@@ -40,8 +40,10 @@
                   </div>
                 </div>
 
-                <button (click)="back()" class="custom-white-btn">Back</button>
-                <button class="custom-btn" (click)="OnSubmit(mailConfigForm)">Submit</button>
+                <div class="align-flex mb-4 mt-4">
+                  <button (click)="back()" class="custom-white-btn mb-3">Back</button>
+                  <button class="custom-btn mb-3" (click)="OnSubmit(mailConfigForm)">Submit</button>
+                </div>
 
                 <div class="clearfix"></div>
               </form>
