--- a/AdminPortal/src/app/addmailtemplate/addmailtemplate.component.html
+++ b/AdminPortal/src/app/addmailtemplate/addmailtemplate.component.html
@@ -70,9 +70,9 @@
                     </div>
                   </div>
                 </div>
-                <div>
-                  <button (click)="back()" class="custom-white-btn">Back</button>
-                  <button class="custom-btn" (click)="OnSubmit(mailConfigForm)">Submit</button>
+                <div class="align-flex">
+                  <button (click)="back()" class="custom-white-btn mb-3">Back</button>
+                  <button class="custom-btn mb-3" (click)="OnSubmit(mailConfigForm)">Submit</button>
                 </div>
                 <div class="clearfix"></div>
               </form>
