--- a/AdminPortal/src/app/components/sidebar/sidebar.component.html
+++ b/AdminPortal/src/app/components/sidebar/sidebar.component.html
@@ -121,7 +121,7 @@
 
     <div class="example-sidenav-content">
       <button type="button" [disabled]="isDrawerDisabled" mat-button (click)="drawer.toggle()">
-        <i *ngIf="!drawer.opened" class="fa fa-chevron-right" aria-hidden="true fa-lg"></i> &nbsp; 
+        <i *ngIf="!drawer.opened" class="fa fa-chevron-right" aria-hidden="true fa-lg"></i>  
         <i *ngIf="drawer.opened" class="fa fa-chevron-left" aria-hidden="true fa-lg"></i> &nbsp; 
       </button>
     </div>
