--- a/AdminPortal/src/app/seomanagement/seomanagement.component.html
+++ b/AdminPortal/src/app/seomanagement/seomanagement.component.html
@@ -30,7 +30,7 @@
                                                     class="custom-btn">Import</button>
                                             </label>
                                         </div>
-                                        <table class="table table-striped table-bordered custom-table">
+                                        <table  class="table table-bordered table-hover" cellspacing="0" width="100%">
                                             <thead>
                                                 <tr>
                                                     <th style="width: 5%;" (click)="toggleSort('TreeNode')">
@@ -127,7 +127,7 @@
                                                 <button (click)="openItemFileInput()" class="custom-btn">Import</button>
                                             </label>
                                         </div>
-                                        <table class="table table-striped table-bordered custom-table">
+                                        <table  class="table table-bordered table-hover" cellspacing="0" width="100%">
                                             <thead>
                                                 <tr>
                                                     <th style="width: 15%;" (click)="toggleSort('Item')">
@@ -224,7 +224,7 @@
                                                 <button (click)="openProdLineInput()" class="custom-btn">Import</button>
                                             </label>
                                         </div>
-                                        <table class="table table-striped table-bordered custom-table">
+                                        <table  class="table table-bordered table-hover" cellspacing="0" width="100%">
                                             <thead>
                                                 <tr>
                                                     <th style="width: 10%;" (click)="toggleSort('ProductLine')">
@@ -322,7 +322,7 @@
                                                 <button (click)="openMajClsFileInput()" class="custom-btn">Import</button>
                                             </label>
                                         </div>
-                                        <table class="table table-striped table-bordered custom-table">
+                                        <table  class="table table-bordered table-hover" cellspacing="0" width="100%">
                                             <thead>
                                                 <tr>
                                                     <th style="width: 10%;" (click)="toggleSort('ItMajClass')">
