--- a/AdminPortal/src/app/components/navbar/navbar.component.html
+++ b/AdminPortal/src/app/components/navbar/navbar.component.html
@@ -1,14 +1,50 @@
+<!-- https://codepen.io/Michael-IRL/pen/vmmbXR -->
+<nav class="navbar navbar-static-top navbar-inverse bg-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbarSupportedContent">    
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>   
+        </button>
+        <a class="navbar-brand" href="#">Navbar</a>
+      </div>
+      <div class="collapse navbar-collapse navbarSupportedContent">
+        <ul class="nav navbar-nav navbar-right">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Social Media<b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Facebook</a></li>
+          </ul>
+        </li>
+      </ul>
+      </div>
+    </div>
+  </nav>
+
 <nav class="navbar navbar-expand-lg navbar-light fixed-top">
     <div class="nav-custom-section">
         <div class="logo">
             <a href="https://admin.brpdevelopment.com" target="_blank" class="simple-text logo-section">
                 <div class="logo-img">
                     <img src="assets/img/BRP-Logo-White.png" />
+                    <span class="sidebar-admin-txt">Admin Portal</span>
                 </div>
-                <span class="sidebar-admin-txt">Admin Portal</span>
+                
             </a>
         </div>
-
+        
         <div class="collapse navbar-collapse" *ngIf="isAdmin">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -22,12 +58,12 @@
         <div class="nav-right-section">
             <span class="welcomtxt nav navbar-nav navbar-right"> {{isAdmin == true ? 'Welcome Admin!' : 'Welcome ' + customerName }} </span>
         </div>
-
+        <button mat-icon-button [matMenuTriggerFor]="menu">
+            <i class="material-icons" style="color: #FFF;">person</i>
+        </button>
     </div>
 
-    <button mat-icon-button [matMenuTriggerFor]="menu">
-        <i class="material-icons" style="color: #FFF;">person</i>
-    </button>
+    
     <mat-menu #menu="matMenu">
         <button mat-menu-item (click)="Logout()">Log Out</button>
     </mat-menu>
