--- a/AdminPortal/src/app/productdetails/addproduct.component.html
+++ b/AdminPortal/src/app/productdetails/addproduct.component.html
@@ -43,7 +43,7 @@
                   <div>
                     <button (click)="openDialog(memRefNo,0,itemId,'','','','')" class="custom-btn">Add New</button>
                     <div *ngIf="productDetails != null && productDetails != 'undefined' &&  productDetails.length > 0">
-                      <table class="table table-striped table-bordered custom-table">
+                      <table  class="table table-bordered table-hover" cellspacing="0" width="100%">
                         <thead>
                           <tr>
                             <th>Doc Type</th>
