--- a/AdminPortal/src/app/user-management/delete-cacher/delete-cacher.component.html
+++ b/AdminPortal/src/app/user-management/delete-cacher/delete-cacher.component.html
@@ -9,7 +9,7 @@
           </h5>
           <div class="card-content">
             <table id="table1" *ngIf="cacherlist!=null && cacherlist!=undefined" style="margin-top: 29px;"
-              class="table table-striped table-bordered custom-table">
+               class="table table-bordered table-hover" cellspacing="0" width="100%">
               <tr *ngFor="let order of cacherlist">
                 <td (click)="Deletecacher(order.sKey)">
                   {{order.sKey}}
