--- a/AdminPortal/src/app/user-management/mailbox-config/mailbox-config.component.html
+++ b/AdminPortal/src/app/user-management/mailbox-config/mailbox-config.component.html
@@ -1,21 +1,29 @@
 <div class="main-content" style="margin-top:0">
-    <div class="container-fluid">
+    <div class="container-fluid admin-table webconfig">
         <div class="row">
             <div class="custom-container">
                 <div class="custom-inner-container">
                     <div class="col-md-12">
                         <div *ngIf="Mailconfiglist!=undefined && Mailconfiglist!=null && flag==true">
-                            <h5>Mailbox Configuration
-                                <small>Manage your email configuration</small>
-                                <button class="header-button" (click)="oncreatenew()">Add New</button>
-                            </h5>
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <h5>Mailbox Configuration
+                                        <small>Manage your email configuration</small>
+
+                                    </h5>
+                                </div>
+                                <div class="col-md-4">
+                                    <button class="header-button" (click)="oncreatenew()">Add New</button>
+                                </div>
+                            </div>
+
                             <div class="record-count-section">
                                 <label>
                                     Search:
                                     <input type="text" (input)="applyFilter()" [(ngModel)]="searchText" />
                                 </label>
                             </div>
-                            <table class="table table-striped table-bordered custom-table">
+                            <table  class="table table-bordered table-hover" cellspacing="0" width="100%">
                                 <thead>
                                     <tr>
                                         <th>Name</th>
@@ -120,16 +128,18 @@
                                                     [(ngModel)]="mail.Company" class="form-control">
                                             </div>
                                         </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group form-black label-floating mt-4">
+                                        <div class="col-md-4 d-flex align-items-center">
+                                            <div class="form-group form-black label-floating">
                                                 <mat-checkbox [(ngModel)]="mail.IsSSL" name="IsSSL">SSL</mat-checkbox>
                                             </div>
                                         </div>
                                     </div>
-                                    <button class="custom-white-btn" (click)="back()">Back</button>
-                                    <button class="custom-btn" (click)="OnSubmit(mailConfigForm)">Submit</button>
-                                    <button class="custom-btn" (click)="Delete()">Delete</button>
-                                    <button class="custom-btn" (click)="sendtestingmail()">Test Email</button>
+                                    <div class="align-flex mb-3 justify-content-evenly">
+                                        <button class="custom-white-btn mb-3" (click)="back()">Back</button>
+                                        <button class="custom-btn mb-3" (click)="OnSubmit(mailConfigForm)">Submit</button>
+                                        <button class="custom-btn mb-3" (click)="Delete()">Delete</button>
+                                        <button class="custom-btn mb-3" (click)="sendtestingmail()">Test Email</button>
+                                    </div>
                                     <div class="clearfix"></div>
                                 </form>
                             </div>
