--- a/AdminPortal/src/app/user-management/mailtemplatelist/mailtemplatelist.component.html
+++ b/AdminPortal/src/app/user-management/mailtemplatelist/mailtemplatelist.component.html
@@ -1,5 +1,5 @@
 <div class="main-content">
-    <div class="container-fluid">
+    <div class="container-fluid admin-table mailtemplate">
         <div class="row">
             <div class="custom-container">
                 <div class="custom-inner-container">
@@ -13,7 +13,7 @@
                         </label>
                     </div>
                     <div *ngIf="mailconfiglist!=null && mailconfiglist!=undefined">
-                        <table class="table table-striped table-bordered custom-table">
+                        <table class="table table-bordered table-hover" cellspacing="0" width="100%">
                             <thead class="text-info">
                                 <tr>
                                     <th>Name</th>
