--- a/AdminPortal/src/app/user-management/safiltersortlist/safiltersortlist.component.css
+++ b/AdminPortal/src/app/user-management/safiltersortlist/safiltersortlist.component.css
@@ -2,7 +2,7 @@ a {
     cursor: pointer;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     .table-mobile table thead {
         display: none;
     }
@@ -27,13 +27,13 @@ a {
         left: 15px;
     }
     .table-mobile table td::before {
-        content: attr(data-title);
+        /* content: attr(data-title); */
         position: absolute;
         top: 11px;
         left: 6px;
         width: 45%;
         padding-right: 10px;
-        white-space: nowrap;
+        /* white-space: nowrap; */
         text-align: left;
         font-weight: bold;
     }
